--- a/src/abstract.tex
+++ b/src/abstract.tex
@@ -1,8 +1,8 @@
-Decentralized visual simultaneous localization and
-mapping (DSLAM) can share location and environmental information between robots and is the essential task for many multi-robot applications. For \textit{"robot"}, the Visual Odometry (VO) is a basic component to estimate the 6-D absolute pose, and for \textit{"multi"}, Decentralized Place Recognition (DPR) is a basic component to produce candidate place recognition matches.
-With the development of Convolutional Neural Network(CNN), both the VO and DPR can be significantly improved in performance, such as Depth-VO-Feat\cite{Zhan:2018e92} and NetVLAD\cite{Arandjelovic:2017997}. However, previous works concentrate on the accuracy of the CNNs, yet consider little about the deployment CNNs on the embedded system.
+Decentralized visual simultaneous localization and mapping (DSLAM) can share locations and environmental information between robots, which is an essential task for many multi-robot applications. For \textit{"robot"}, the Visual Odometry (VO) is a basic component to estimate the 6-DoF absolute pose, and for \textit{"multi"}, Decentralized Place Recognition (DPR) is a fundamental element to produce candidate place matches.
+%Due to the advantages of Convolutional Neural Network(CNN) on image processing tasks, CNN-based VO and DPR have achieved significant improvements in performance., such as Depth-VO-Feat\cite{Zhan:2018e92} and NetVLAD\cite{Arandjelovic:2017997}. However, previous works concentrate on the accuracy of the CNNs, yet consider little about the deployment CNNs on the embedded system.
+Although some CNN-based VO and DPR methods have made significant progress in performance compared to feature-based methods, such as Depth-VO-Feat \cite{Zhan:2018e92} and NetVLAD \cite{Arandjelovic:2017997}, they focus primarily  on the accuracy of CNNs, yet consider little about the deployment of CNNs on embedded systems.
 
-Because the embedded system usually support fixed-point CNN only, we propose a pose-sensitive fixed-point finetune method for the CNN-based monocular VO, and accelerate the VO from 230ms to 10ms with the similar accuracy. As the frequency of DPV influences the final result of DSLAM, we propose a module-mixed pipeline scheduling method to calculate the NetVLAD every 4 input frames from every 6 frames, and improve the final accuracy of DSLAM.
+Since the embedded system usually only supports fixed-point CNN, we propose a pose-sensitive fixed-point finetune method for the CNN-based monocular VO, and accelerate the per-frame VO from 230ms to 10ms with similar accuracy. In addition, empirical experiments show that the frequency of DPR has a large impact on the final result of DSLAM. So we propose a cross-component pipeline scheduling method to increase the computational speed of NetVLAD from once every 12 frames to once every 8 frames, and further improve the final accuracy of DSLAM.
 % We find the tranditional average trajectory error (ATE) can not indicate the performance of trajectory merging in DSLAM, so we propose a new indicator called loop-closure recall (LCR) to evaluate the performance of trajectory merging.
 
 % With the gradual improvement of the single-agent capabilities, it is possible to build up the multi-agent collaborative intelligence system.
