--- a/src/conclusion.tex
+++ b/src/conclusion.tex
@@ -1,3 +1,3 @@
 \label{sec:conclusion} 
 
-We propose a hardware-software co-design DSLAM system with the help of Xilinx Zynq MPSoC and Deephi DPU. We optimize two essential components of the DSLAM system,  $1)$Visual Odometry(VO) and $2)$ Place Recognition on the embedded system. From the aspect of calculation, the vectorization and projection operations on the PS side of Zynq MPSoC needed by NetVLAD is the bottleneck in doing more frequent place recognition. From the aspect of communication, the data traffic for inter-robot relative pose estimation consumes the most communication resources. The accelerator for vectorization based on FPGA and more data-efficient inter-robot pose estimation method could be researched in future work.
+Though DSLAM can benefit from CNN, the deployment of CNN on embedded systems faces big challenges. We propose a CNN-based monocular DSLAM system deployed on Xilinx ZU9 MPSoC, and a Pose-Sensitive fixed-point finetune method to balance the accuracy and speed of CNN-based Visual Odometry on embedded FPGA. We also explore the impact of NetVLAD frequency on DSLAM results, and propose a cross-component scheduling method to increase the operating frequency of NetVLAD to improve DSLAM performance.
